--- a/app/views/standard_categories/edit.html.erb
+++ b/app/views/standard_categories/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', standard_category: @standard_category %>
 
-<%= link_to 'Show', @standard_category %> |
-<%= link_to 'Back', standard_categories_path %>
+<%= link_to 'Show', [@standard_category.course,@standard_category] %> |
+<%= link_to 'Back', course_standard_categories_path(@standard_category.course) %>
