fix satisfactory typo

--- a/app/views/standard_categories/_form.html.erb
+++ b/app/views/standard_categories/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :satsifactory_limit %>
-    <%= f.number_field :satsifactory_limit %>
+    <%= f.label :satisfactory_limit %>
+    <%= f.number_field :satisfactory_limit %>
   </div>
 
   <div class="actions">
