--- a/app/views/standard_categories/index.html.erb
+++ b/app/views/standard_categories/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th>Satsifactory limit</th>
+      <th>Satisfactory limit</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +17,7 @@
       <tr>
         <td><%= standard_category.name %></td>
         <td><%= standard_category.description %></td>
-        <td><%= standard_category.satsifactory_limit %></td>
+        <td><%= standard_category.satisfactory_limit %></td>
         <td><%= link_to 'Show', [standard_category.course,standard_category] %></td>
         <td><%= link_to 'Edit', edit_course_standard_category_path(standard_category.course,standard_category) %></td>
         <td><%= link_to 'Destroy', [standard_category.course,standard_category], method: :delete, data: { confirm: 'Are you sure?' } %></td>
