--- a/app/views/standard_categories/show.html.erb
+++ b/app/views/standard_categories/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Satsifactory limit:</strong>
-  <%= @standard_category.satsifactory_limit %>
+  <strong>Satisfactory limit:</strong>
+  <%= @standard_category.satisfactory_limit %>
 </p>
 
 <%= link_to 'Edit', edit_course_standard_category_path(@standard_category.course,@standard_category) %> |
