--- a/app/views/courses/progress.html.erb
+++ b/app/views/courses/progress.html.erb
@@ -1,6 +1,6 @@
 <% @students.each do |student| %>
   <h3 style="page-break-before:always">
-    Progress Report for <%=student.name%>
+    Progress Report for <%=student.name%> &lt;<%=student.email%>&gt;
   </h3>
   <%= render 'students/progress', student: student, standard_categories: @course.standard_categories, grade_specifications: @course.grade_specifications, standards: @standards, editable: false %>
 <% end %>
