--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Attempt</h1>
+<h1>New Attempts</h1>
 
-<%= render 'form', attempt: @attempt %>
+<%= render 'many_form', course: @course %>
 
-<%= link_to 'Index', course_attempts_path(@attempt.course) %>
+<%= link_to 'Index', course_attempts_path(@course) %>
