tweaks to provisional attempt view

--- a/app/views/attempts/show.html.erb
+++ b/app/views/attempts/show.html.erb
@@ -32,4 +32,4 @@
 
 <%= link_to 'Edit', edit_course_attempt_path(@attempt.course,@attempt) %> |
 <%= link_to 'Index', course_attempts_path(@attempt.course) %> |
-<%= link_to "Recent ★s", index_recent_provisionals_course_attempts_path(@course) %>
+<%= link_to "Provisional Attempts", index_recent_provisionals_course_attempts_path(@course) %>
