--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
           <%= link_to "Attempts", course_attempts_path(@course) %>
           <%= link_to "New Attempts", new_course_attempt_path(@course) %>
-          <%= link_to "Recent ★s", index_recent_provisionals_course_attempts_path(@course) %>
+          <%= link_to "Provisional Attempts", index_recent_provisionals_course_attempts_path(@course) %>
           <%= link_to "Progress", progress_course_path(@course) %>
         </p>
       <% end %>
