--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,11 @@
   <body>
     <h1><% if @course && @course.name %><%= @course.name %> | <% end %>SbgRails</h1>
     <p>
-      <%= link_to "Home", :home %>
       <%= link_to "Courses", :courses %>
+      <% if @course && @course.id %>
+        | <%= link_to "New Attempts", new_course_attempt_path(@course) %>
+        | <%= link_to "Progress", progress_course_path(@course) %>
+      <% end %>
     </p>
       <% if @course && @course.id %>
         <p>
@@ -22,9 +25,7 @@
           <%= link_to "Standards", course_standards_path(@course) %>
           <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
           <%= link_to "Attempts", course_attempts_path(@course) %>
-          <%= link_to "New Attempts", new_course_attempt_path(@course) %>
           <%= link_to "Provisional Attempts", index_recent_provisionals_course_attempts_path(@course) %>
-          <%= link_to "Progress", progress_course_path(@course) %>
         </p>
       <% end %>
     <hr>
