--- a/app/views/attempts/_many_form.html.erb
+++ b/app/views/attempts/_many_form.html.erb
@@ -46,6 +46,10 @@
 
   <legend>Attempts</legend>
 
+  <div class="actions">
+    <%= submit_tag("Create Attempts") %>
+  </div>
+
   <table>
     <thead>
       <tr>
@@ -59,7 +63,7 @@
       </tr>
     </thead>
     <tbody>
-      <% 30.times do %>
+      <% 100.times do %>
         <tr>
           <td>
             <%=
