--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(section) do |f| %>
+<%= form_for [section.course,section] do |f| %>
   <% if section.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(section.errors.count, "error") %> prohibited this section from being saved:</h2>
@@ -14,11 +14,6 @@
   <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :course_id %>
-    <%= f.text_field :course_id %>
   </div>
 
   <div class="actions">
