--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -6,7 +6,6 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Course</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +14,9 @@
     <% @sections.each do |section| %>
       <tr>
         <td><%= section.name %></td>
-        <td><%= section.course %></td>
-        <td><%= link_to 'Show', section %></td>
-        <td><%= link_to 'Edit', edit_section_path(section) %></td>
-        <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', [section.course,section] %></td>
+        <td><%= link_to 'Edit', edit_course_section_path(section.course,section) %></td>
+        <td><%= link_to 'Destroy', [section.course,section], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Section', new_section_path %>
+<%= link_to 'New Section', new_course_section_path(@course) %>
