--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Section:</strong>
+  <%= @student.section.name if @student.section %>
+</p>
+
+<p>
   <strong>School identifier:</strong>
   <%= @student.school_identifier %>
 </p>
