--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
   </head>
 
   <body>
@@ -25,6 +26,7 @@
           <%= link_to "Students", course_students_path(@course) %>
           <%= link_to "Standard Categories", course_standard_categories_path(@course) %>
           <%= link_to "Standards", course_standards_path(@course) %>
+          <%= link_to "Exercises", course_exercises_path(@course) %>
           <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
           <%= link_to "Attempts", course_attempts_path(@course) %>
           <%= link_to "Provisional Attempts", index_recent_provisionals_course_attempts_path(@course) %>
