--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,12 @@
   </head>
 
   <body>
-    <h1><% if @course && @course.name %><%= @course.name %> | <% end %>SbgRails</h1>
+    <h1>
+      <% if @course && @course.name %>
+        <%= @course.name %> |
+      <% end %>
+      SbgRails
+    </h1>
     <p>
       <%= link_to "Courses", :courses %>
       <% if @course && @course.id %>
@@ -19,19 +24,19 @@
           <%= link_to "(.tex)", progress_course_path(@course, format: :tex) %>
       <% end %>
     </p>
-      <% if @course && @course.id %>
-        <p>
-          <%= link_to "Grade Specifications", course_grade_specifications_path(@course) %>
-          <%= link_to "Sections", course_sections_path(@course) %>
-          <%= link_to "Students", course_students_path(@course) %>
-          <%= link_to "Standard Categories", course_standard_categories_path(@course) %>
-          <%= link_to "Standards", course_standards_path(@course) %>
-          <%= link_to "Exercises", course_exercises_path(@course) %>
-          <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
-          <%= link_to "Attempts", course_attempts_path(@course) %>
-          <%= link_to "Provisional Attempts", index_recent_provisionals_course_attempts_path(@course) %>
-        </p>
-      <% end %>
+    <% if @course && @course.id %>
+      <p>
+        <%= link_to "Students", course_students_path(@course) %>
+        | <%= link_to "Grade Specifications", course_grade_specifications_path(@course) %>
+        | <%= link_to "Sections", course_sections_path(@course) %>
+        | <%= link_to "Standard Categories", course_standard_categories_path(@course) %>
+        | <%= link_to "Standards", course_standards_path(@course) %>
+        | <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
+        | <%= link_to "Attempts", course_attempts_path(@course) %>
+        | <%= link_to "Provisional Attempts", index_recent_provisionals_course_attempts_path(@course) %>
+        | <%= link_to "Exercises", course_exercises_path(@course) %>
+      </p>
+    <% end %>
     <hr>
     <%= yield %>
   </body>
