add Assessments to nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
         | <%= link_to "Attempts", course_attempts_path(@course) %>
         | <%= link_to "Provisional Attempts", index_recent_provisionals_course_attempts_path(@course) %>
         | <%= link_to "Exercises", course_exercises_path(@course) %>
+        | <%= link_to "Assessments", course_assessments_path(@course) %>
       </p>
     <% end %>
     <hr>
