--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,9 @@
     </p>
     <% if @course && @course.id %>
       <p>
-        <%= link_to "Students", course_students_path(@course) %>
+        <%= link_to "Sections", course_sections_path(@course) %>
+        | <%= link_to "Students", course_students_path(@course) %>
         | <%= link_to "Grade Specifications", course_grade_specifications_path(@course) %>
-        | <%= link_to "Sections", course_sections_path(@course) %>
         | <%= link_to "Standard Categories", course_standard_categories_path(@course) %>
         | <%= link_to "Standards", course_standards_path(@course) %>
         | <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
