--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -23,5 +23,6 @@
   </ul>
 </p>
 
+<%= link_to 'Print', print_course_assessment_path(@assessment.course,@assessment, format: :tex) %> |
 <%= link_to 'Edit', edit_course_assessment_path(@assessment.course,@assessment) %> |
 <%= link_to 'Index', course_assessments_path(@assessment.course) %>
