--- a/app/views/assessments/print.tex.erb
+++ b/app/views/assessments/print.tex.erb
@@ -1,30 +1,50 @@
-\documentclass[11pt]{article}
-\usepackage[utf8]{inputenc}
+\documentclass[12pt]{article}
 
-\usepackage[margin=1in]{geometry}
+\usepackage[letterpaper,margin=1in]{geometry}
 
-\usepackage{amssymb,multicol,newunicodechar}
-\usepackage{booktabs}
+\setlength{\parindent}{0pt}
+\parskip=0.5em
 
-\newunicodechar{✘}{\(\times\)}
-\newunicodechar{⚠}{{\fontencoding{U}\fontfamily{futs}\selectfont\char 66\relax}}
-\newunicodechar{✔}{\(\checkmark\)}
-\newunicodechar{✱}{\(\ast\)}
+\usepackage{amssymb}
+\usepackage{amsmath}
 
-\parindent=0pt
-\pagenumbering{gobble}
+\usepackage{pgfplots}
+
+\newcommand{\headerText}{
+  <%= @course.name %>
+}
+
+\newcommand{\footerText}{}
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0pt}% Default \headrulewidth is 0.4pt
+\renewcommand{\footrulewidth}{0pt}% Default \footrulewidth is 0pt
+\chead{\footnotesize\bf\headerText}
+\cfoot{\footnotesize\footerText}
+
+
+
 
 \begin{document}
 
 <% @students.each do |student| %>
-\section*{Progress Report for <%=student.name%>}
+\section*{<%= @assessment.name %> -- <%=student.name%>}
+\renewcommand{\footerText}{<%= @assessment.name %> -- <%=student.name%>}
 
-For <%= @course.name %>. Generated on <%= Time.now.inspect %>
+<% student_exercise_versions = @exercise_versions.select{|e| e.students.include? student} %>
 
-\vspace{1em}
+<% if student_exercise_versions.length == 0 %>
+  No exercises available.
+<% else %>
+  <% student_exercise_versions.each do |e| %>
+      \textbf{
+        <%= e.covered_standard.name %>
+        (version <%= e.id %>-<%= e.exercise_id %>):
+      }
+    <%= e.exercise.description.html_safe %>
 
-<% @exercise_versions.select{|e| e.students.include? student}.each do |e| %>
-  <%= e.covered_standard.name %>: <%= e.exercise_id %> <%= e.exercise.description %>
+  <% end %>
 <% end %>
 
 \newpage
