--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to 'Print Assessment from LaTeX', print_course_assessment_path(@assessment.course,@assessment, format: :tex) %>
+
 <p>
   <strong>Name:</strong>
   <%= @assessment.name %>
@@ -24,5 +26,4 @@
 </p>
 
 <%= link_to 'Print', print_course_assessment_path(@assessment.course,@assessment, format: :tex) %> |
-<%= link_to 'Edit', edit_course_assessment_path(@assessment.course,@assessment) %> |
 <%= link_to 'Index', course_assessments_path(@assessment.course) %>
