allow adding custom config in TeX Header for assessments

--- a/app/views/assessments/_form.html.erb
+++ b/app/views/assessments/_form.html.erb
@@ -16,6 +16,11 @@
     <%= f.text_field :name %>
   </div>
 
+  <div class="field">
+    <%= f.label :tex_header %>
+    <%= f.text_area :tex_header %>
+  </div>
+
 
   <div class="field">
     <%= f.label :covered_standards %>
