--- a/app/views/assessments/print.tex.erb
+++ b/app/views/assessments/print.tex.erb
@@ -29,11 +29,7 @@
 
 }
 
-%Use this for each exercise on a separate sheet.
-%\renewcommand{\exercise}[2]{
-%  \textbf{#1:} #2
-%  \newpage
-%}
+<%= @assessment.tex_header %>
 
 
 
