--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -8,6 +8,12 @@
 </p>
 
 <p>
+  <strong>TeX Header:</strong>
+</p>
+
+<pre><%= @assessment.tex_header %></pre>
+
+<p>
   <strong>Covered Standards:</strong>
   <ul>
     <% @assessment.covered_standards.each do |covered_standard| %>
