add table styling to new attempts form

--- a/app/views/attempts/_many_form.html.erb
+++ b/app/views/attempts/_many_form.html.erb
@@ -45,7 +45,7 @@
     <%= submit_tag("Create Attempts") %>
   </div>
 
-  <table>
+  <table class="table table-striped">
     <thead>
       <tr>
         <th>Mark</th>
