add link to csv progress export

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
         | <%= link_to "New Attempts", new_course_attempt_path(@course) %>
         | <%= link_to "Progress", progress_course_path(@course) %>
           <%= link_to "(.tex)", progress_course_path(@course, format: :tex) %>
+          <%= link_to "(.csv)", progress_course_path(@course, format: :csv) %>
       <% end %>
     </p>
     <% if @course && @course.id %>
