compile PDFs in-app

--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -1,7 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'print.tex', print_course_assessment_path(@assessment.course,@assessment, format: :tex) %> |
-<%= link_to 'solutions.tex', print_solutions_course_assessment_path(@assessment.course,@assessment, format: :tex) %>
+<%= link_to 'Print', print_course_assessment_path(@assessment.course,@assessment, format: :pdf) %>
+<%= link_to '(.tex)', print_course_assessment_path(@assessment.course,@assessment, format: :tex) %>
+|
+<%= link_to 'Solutions', print_solutions_course_assessment_path(@assessment.course,@assessment, format: :pdf) %> 
+<%= link_to '(.tex)', print_solutions_course_assessment_path(@assessment.course,@assessment, format: :tex) %> 
 
 <p>
   <strong>Name:</strong>
@@ -33,6 +36,4 @@
   </ul>
 </p>
 
-<%= link_to 'Print', print_course_assessment_path(@assessment.course,@assessment, format: :tex) %> |
-<%= link_to 'Solutions', print_solutions_course_assessment_path(@assessment.course,@assessment, format: :tex) %> |
 <%= link_to 'Index', course_assessments_path(@assessment.course) %>
