--- a/app/views/assessments/print.tex.erb
+++ b/app/views/assessments/print.tex.erb
@@ -1,1 +1,73 @@
-print.pdf.erbtex
+\documentclass[12pt]{article}
+
+\usepackage[letterpaper,margin=1in]{geometry}
+
+\setlength{\parindent}{0pt}
+\parskip=0.5em
+
+\usepackage{amssymb}
+\usepackage{amsmath}
+
+\usepackage{tikz}
+\usepackage{pgfplots}
+
+\usepackage{enumerate}
+
+\newcommand{\footerText}{
+  <%= @course.name %>
+}
+
+\newcommand{\headerText}{}
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0pt}% Default \headrulewidth is 0.4pt
+\renewcommand{\footrulewidth}{0pt}% Default \footrulewidth is 0pt
+\chead{\footnotesize\bf\headerText}
+\cfoot{\footnotesize\footerText}
+
+
+\newcommand{\exercise}[2]{
+  \textbf{#1:} #2
+
+}
+
+<%= @assessment.tex_header %>
+
+
+
+
+\begin{document}
+
+<% @students.each do |student| %>
+\renewcommand{\headerText}{<%= @assessment.name %> -- <%=student.name%>}
+
+<%
+  student_exercise_versions = @exercise_versions.select do |e|
+    e.students.include?(student) && e.standard.unmastered_by_student?(student)
+  end
+%>
+
+  <% @exercise_versions.each do |e| %>
+    <% if e.students.include?(student) %>
+    <% if e.standard.unmastered_by_student?(student) %>
+      \exercise{%
+        <%= e.covered_standard.name %>
+        (version <%= e.id %>)%
+      }{
+        <%= e.exercise.description.html_safe %>
+      }
+    <% else %>
+     \exercise{%
+       <%= e.covered_standard.name %>%
+     }{\textit{You've already mastered this standard.}}
+    <% end %>
+    <% end %>
+  <% end %>
+
+
+\newpage
+
+<% end %>
+
+\end{document}
