--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,11 @@
         | <%= link_to "Grade Specifications", course_grade_specifications_path(@course) %>
         | <%= link_to "Standard Categories", course_standard_categories_path(@course) %>
         | <%= link_to "Standards", course_standards_path(@course) %>
-        | <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
+     <br> <%= link_to "Attempt Categories", course_attempt_categories_path(@course) %>
         | <%= link_to "Attempts", course_attempts_path(@course) %>
         | <%= link_to "Provisional Attempts", index_recent_provisionals_course_attempts_path(@course) %>
         | <%= link_to "Exercises", course_exercises_path(@course) %>
+          <%= link_to "(import)", import_course_exercises_path(@course) %>
         | <%= link_to "Assessments", course_assessments_path(@course) %>
       </p>
     <% end %>
